<resources>
    <string name="app_name">notes</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>
